tg-1341 añadir constraint de unicidad a person_id en healthcare_professional

--- a/dba/liquibase/incrementales-v0_6.yml
+++ b/dba/liquibase/incrementales-v0_6.yml
@@ -69,3 +69,14 @@ databaseChangeLog:
                 type: int
                 tableName: users
 
+    - changeset:
+        id: add-constraints-person_id-healthcare_professional
+        author: lmanterola
+        columns:
+            - column:
+                constraints:
+                    unique: true
+                name: person_id
+                type: int
+                tableName: healthcare_professional
+
