tg-1321 [BE] Agregar al modelo eliminacion logica de agenda

--- a/dba/liquibase/incrementales-v0_6.yml
+++ b/dba/liquibase/incrementales-v0_6.yml
@@ -115,3 +115,28 @@ databaseChangeLog:
         tableName:  healthcare_professional 
         validate:  true
         
+- changeSet:       
+    id: add-diary-deleteable-audit
+    author: gmurgolo
+    changes:
+    - addColumn:
+        tableName: diary
+        columns:
+        - column:
+            constraints:
+                nullable: false
+            name: deleted
+            type: boolean
+            defaultValue: ${boolean.false}  
+        - column:
+            constraints:
+                nullable: true
+            name: deleted_by
+            type: int
+            defaultValue: -1
+        - column:
+            constraints:
+                nullable: true
+            name: deleted_on
+            type: datetime
+            defaultValueDate: ${date.now} 
