tg-1422 eliminar campo is_medical_doctor

--- a/dba/liquibase/incrementales-v0_6.yml
+++ b/dba/liquibase/incrementales-v0_6.yml
@@ -140,3 +140,12 @@ databaseChangeLog:
             name: deleted_on
             type: datetime
             defaultValueDate: ${date.now} 
+
+- changeSet:
+    id: drop column is_medical_doctor
+    author: lmanterola
+    changes:
+    -  dropColumn:  
+        columnName:  is_medical_doctor
+        tableName:  healthcare_professional
+        
