tg-1432. [BE] Ajustar propierties de producción para dejar datos obligatorios

--- a/back-end/hospital-api/src/main/resources/application-prod.properties
+++ b/back-end/hospital-api/src/main/resources/application-prod.properties
@@ -8,3 +8,11 @@ ws.renaper.url.persona=/personas/renaper
 # ===============================
 ws.renaper.enabled = true
 ws.federar.enabled = true
+
+
+## Variables requeridas para producción
+spring.datasource.url=jdbc:postgresql://${DATABASE_IP_PORT}/${DATABASE_SCHEMA}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASS}
+token.secret=${TOKEN_SECRET}
+internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY}
