tg-1443 Fix Se persiste prepaga predeterminada Sumar solo cuando la Obra Social tampoco ha sido especificada - Asignacion de Turnos

--- a/dba/liquibase/incrementales-v0_6.yml
+++ b/dba/liquibase/incrementales-v0_6.yml
@@ -148,4 +148,11 @@ databaseChangeLog:
     -  dropColumn:  
         columnName:  is_medical_doctor
         tableName:  healthcare_professional
-        
+
+- changeSet:  
+    id:  dropNotNullConstraint-appointment-medical_coverage_name
+    author:  saguero  
+    changes:  
+    -  dropNotNullConstraint:  
+        columnName:  medical_coverage_name  
+        tableName:  appointment       
