tg-1459. [BE] Configuración de profile

--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -1,5 +1,15 @@
-management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env, loggers}
-management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env, loggers}
+# Documentos de internacion
+internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY:temp}
+token.secret=${TOKEN_SECRET:ultra_secret_token}
+
+
+# Para ver las consultas
+# spring.jpa.show-sql=true
+# Para ver valores bindeados
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env,loggers}
+management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env,loggers}
 management.endpoint.loggers.enabled=true
 
 app.data.sample.addresses[0].id=1
