--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -2,9 +2,6 @@
 # = WEB 
 # ===============================
 
-# ============= Profile =============
-spring.profiles.default=dev
-
 # ============= API =============
 server.servlet.context-path=/api
 server.port = ${SERVER_PORT:8080}
@@ -19,8 +16,8 @@ admin.mail=${ADMIN_MAIL:admin@example.com}
 admin.password=${ADMIN_PASS:admin123}
 
 # ============= TOKEN ===========
+token.secret=${TOKEN_SECRET}
 token.header=X-Auth-Token
-token.secret=${TOKEN_SECRET:ultra_secret_token}
 
 # Tiempo en minutos
 token.expiration=${TOKEN_EXPIRATION:120}
@@ -60,20 +57,12 @@ spring.jackson.default-property-inclusion=non_null
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=${HICKARI_MAXIMUM_POOL_SIZE:3}
 
-## SQLServer
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-#spring.datasource.url=jdbc:sqlserver://${DATABASE_IP_PORT:localhost:1433};databaseName=${DATABASE_SCHEMA:hospitalDB};integratedSecurity=false;
-#spring.datasource.username=${DATABASE_USER:SA}
-
 ## PostgreSQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${DATABASE_IP_PORT:localhost:5432}/${DATABASE_SCHEMA:hospitalDB}
 spring.datasource.username=${DATABASE_USER:postgres}
-
-
 spring.datasource.password=${DATABASE_PASS:Local123}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.validationQuery = SELECT 1
 
 #drop n create table again, good for testing, comment this in production
@@ -82,8 +71,8 @@ spring.jpa.hibernate.ddl-auto=validate
 
 
 management.endpoint.metrics.enabled=false
-management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env}
-management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env}
+management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info}
+management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info}
 management.endpoint.prometheus.enabled=false
 management.metrics.export.prometheus.enabled=false
 management.health.mail.enabled=false
@@ -96,11 +85,6 @@ actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
 app.default.language=${DEFAULT_LANGUAGE:es-AR}
 app.other.languages=${OTHER_LANGUAGES:en-US}
 
-# Para ver las consultas
-# spring.jpa.show-sql=true
-# Para ver valores bindeados
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
 # ===============================
 # reCaptcha Google
 # ===============================
@@ -109,6 +93,5 @@ google.recaptcha.secret.key=${RECAPTCHA_SECRET_KEY:6LcVh-UUAAAAAIWVvwCNB3zLdNT7B
 google.recaptcha.validator.url=https://www.google.com/recaptcha/api/siteverify
 google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
 
-# Documentos de internacion
-internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY:temp}
+internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY}
 
