tg-1480 Fix en Startup de Aplicación con Ansible por propiedad token_secret no definida

--- a/sgh-ansible/hosts-template-ha.yml
+++ b/sgh-ansible/hosts-template-ha.yml
@@ -32,3 +32,4 @@ all:
         sgh_database_user_name: sgh_test
         sgh_database_user_password: sgh_test
         sgh_database_name: sgh_test
+	token_secret: toBeChanged
