--- a/sgh-ansible/hosts-template-single-node.yml
+++ b/sgh-ansible/hosts-template-single-node.yml
@@ -33,3 +33,4 @@ all:
         sgh_database_user_name: sgh_test
         sgh_database_user_password: sgh_test
         sgh_database_name: sgh_test
+        token_secret: toBeChanged
