Comienza desarrollo de 0.7

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -36,3 +36,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v0_6.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v0_7.yml
+    relativeToChangelogFile: true
