tg-1408 Agrega properties docker

--- a/ci/docker/nginx-jar/docker.properties
+++ b/ci/docker/nginx-jar/docker.properties
@@ -1,1 +1,4 @@
 ## Add docker configuration here
+## Add docker configuration here
+internment.document.directory=/sgh
+token.secret=${TOKEN_SECRET:ultra_secret_token}
