--- a/back-end/hospital-api/src/main/resources/application-prod.properties
+++ b/back-end/hospital-api/src/main/resources/application-prod.properties
@@ -3,6 +3,9 @@ ws.renaper.url.base=https://federador.msal.gob.ar/masterfile-federacion-service/
 ws.renaper.url.cobertura=/personas/cobertura
 ws.renaper.url.persona=/personas/renaper
 
+# Tiempo en minutos
+token.expiration=${TOKEN_EXPIRATION:20}
+
 # ===============================
 # Modules
 # ===============================
