tg-1568. [DB] Agregar estado Atendido a turnos

--- a/dba/liquibase/incrementales-v0_7.yml
+++ b/dba/liquibase/incrementales-v0_7.yml
@@ -78,3 +78,14 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: appointment_state
             validate: true
+
+                
+    - changeSet:
+        id: add-new-appointment-state
+        comment: Agregar nueva entrada en estados de turno
+        author: etrapani
+        context: "!schema-only"
+        changes:
+            - sql:
+                sql: |-
+                    INSERT INTO appointment_state (id, description) VALUES(5, 'Atendido');
