tg-1753 [BE] [Backoffice] Ajustar tamaño de los campos en la tabla dirección

--- a/dba/liquibase/incrementales-v1_1.yml
+++ b/dba/liquibase/incrementales-v1_1.yml
@@ -14,3 +14,20 @@ databaseChangeLog:
                     nullable: false
                 defaultValue: Sin información
             tableName: appointment
+    
+    - changeSet:
+        id: update-length-fields-address
+        author: lmanterola
+        changes: 
+            - modifyDataType:
+                columnName:  number  
+                newDataType:  varchar(20)    
+                tableName:  address
+            - modifyDataType:
+                columnName:  street  
+                newDataType:  varchar(70)    
+                tableName:  address
+            - modifyDataType:
+                columnName:  apartment  
+                newDataType:  varchar(8)    
+                tableName:  address
