--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -44,3 +44,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_1.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_2.yml
+    relativeToChangelogFile: true
