--- a/front-end/backoffice/package.json
+++ b/front-end/backoffice/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-admin": "^3.5.0",
     "react-dom": "^16.13.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
