--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -89,9 +89,10 @@ app.other.languages=${OTHER_LANGUAGES:en-US}
 # reCaptcha Google
 # ===============================
 
-google.recaptcha.secret.key=${RECAPTCHA_SECRET_KEY:6LcVh-UUAAAAAIWVvwCNB3zLdNT7BSAnCZ0cZjwz}
+google.recaptcha.secret.key=${RECAPTCHA_SECRET_KEY:test-key}
+google.recaptcha.site.key=${RECAPTCHA_PUBLIC_KEY:test-key}
 google.recaptcha.validator.url=https://www.google.com/recaptcha/api/siteverify
-google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
+google.recaptcha.enable=${RECAPTCHA_ENABLE:false}
 
 internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY}
 
