--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -23,7 +23,7 @@ token.header=X-Auth-Token
 
 # Tiempo en minutos
 token.expiration=${TOKEN_EXPIRATION:120}
-refreshToken.expiration=0
+refreshToken.expiration=${REFRESHTOKEN_EXPIRATION:10080}
 validationToken.expiration=${VALIDTOKEN_EXPIRATION:1440}
 
 # =============== EMAIL =================
