tg-1901 Obtencion de configuracion de recaptcha mediante servicio

--- a/back-end/hospital-api/src/test/resources/swagger-test.properties
+++ b/back-end/hospital-api/src/test/resources/swagger-test.properties
@@ -75,6 +75,7 @@ ws.renaper.tokenExpiration=15
 # reCaptcha Google
 # ===============================
 
-google.recaptcha.secret.key=${RECAPTCHA_SECRET_KEY:6LcVh-UUAAAAAIWVvwCNB3zLdNT7BSAnCZ0cZjwz}
+google.recaptcha.secret.key=${RECAPTCHA_SECRET_KEY:test-key}
+google.recaptcha.site.key=${RECAPTCHA_PUBLIC_KEY:test-key}
 google.recaptcha.validator.url=https://www.google.com/recaptcha/api/siteverify
 google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
