Comienza desarrollo de 1.3

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -48,3 +48,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_2.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_3.yml
+    relativeToChangelogFile: true
