tg-1942 Agregar propiedad habilitarBotonConsulta

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -96,3 +96,9 @@ google.recaptcha.enable=${RECAPTCHA_ENABLE:false}
 
 internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY}
 
+
+
+# ===============================
+# new consultation
+# ===============================
+habilitar.boton.consulta=false
