--- a/dba/liquibase/incrementales-v1_3.yml
+++ b/dba/liquibase/incrementales-v1_3.yml
@@ -1,3 +1,12 @@
 databaseChangeLog: 
     - logicalFilePath: incrementales-v1_3 
 
+    - changeSet:        
+        id: dropNotNullConstraint-appointment-phone-number
+        author: tmedina
+        changes:
+        - dropNotNullConstraint:
+            columnDataType: varchar
+            columnName: phone_number
+            tableName: appointment
+
