tg-2039 [P1] Fix error al guardar nueva consulta con diagnóstico con muchos caracteres
(cherry picked from commit 0683dfcb90f67a839d91e473181f9a1b53597de0)

--- a/dba/liquibase/incrementales-v1_3.yml
+++ b/dba/liquibase/incrementales-v1_3.yml
@@ -9,4 +9,13 @@ databaseChangeLog:
             columnDataType: varchar
             columnName: phone_number
             tableName: appointment
+    
+    - changeSet:
+        id: update-reason-description-length
+        author: tmedina
+        changes:
+            - modifyDataType:
+                columnName:  description  
+                newDataType:  varchar(255)    
+                tableName:  reasons
 
