tg-1954 Se agregan las dependencias necesarias para adopcion del standard HL7 Fhir

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -18,7 +18,8 @@
 	<inceptionYear>2020</inceptionYear>
 	<modules>
 		<module>hospital-api</module>
-	</modules>
+        <module>interoperability</module>
+    </modules>
 	<properties>
 	</properties>
 
