--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -32,6 +32,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- application dependencies -->
+		<dependency>
+			<groupId>net.pladema</groupId>
+			<artifactId>interoperability</artifactId>
+			<version>${revision}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
