tg-1958 Se registran los recursos Providers necesarios para las operaciones RESTful requeridas

--- a/back-end/hospital-api/src/test/resources/swagger-test.properties
+++ b/back-end/hospital-api/src/test/resources/swagger-test.properties
@@ -69,7 +69,7 @@ actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
 
 #========= RENAPER ==========#
 ws.renaper.tokenExpiration=15
-
+ws.renaper.dominio
 
 # ===============================
 # reCaptcha Google
