Comienza desarrollo de 1.5

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -56,3 +56,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_4.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_5.yml
+    relativeToChangelogFile: true
