--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 # = WEB 
 # ===============================
 
+spring.jpa.show-sql=true
+
 # ============= API =============
 server.servlet.context-path=/api
 server.port = ${SERVER_PORT:8080}
