Comienza desarrollo de 1.6

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -60,3 +60,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_5.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_6.yml
+    relativeToChangelogFile: true
